--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "eslint": "^9.7.0",
     "nodemon": "^3.1.4"
   },
   "dependencies": {
     "mongoose": "^8.5.1"
-  }
+  },
+  "description": ""
 }
