--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.19.2",
     "globals": "^15.8.0",
     "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
     "pino-http": "^10.2.0",
