--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "eslint": "^9.7.0",
     "express": "^4.19.2",
