--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ MONGODB_USER=Nazar
 MONGODB_PASSWORD=ZXi2BYIuudypJ8Jb
 MONGODB_URL=cluster0.jlxbgtg.mongodb.net
 MONGODB_DB=my-contacts
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=795db7001@smtp-brevo.com
+SMTP_FROM=nazarguk670@gmail.com
+JWT_SECRET=VOQjLdrpG1TWCHhDzv3o
+APP_DOMAIN=http://localhost:3000/auth
+CLOUDINARY_CLOUD_NAME=dqauwp0vn
+CLOUDINARY_API_KEY=137534632316374
+CLOUDINARY_API_SECRET=EeTC_ITQ13RlB_lRIOHX_q9hq1A
