fixed displaying routes on api

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.9.14",
     "pino-http": "^10.2.0",
     "pino-pretty": "^11.2.1",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
 }
